syntax="proto3";

package user;

option go_package="pb/";


message RequestParams {
    uint64 userId = 1;
}

message UserResponse {
    uint64 id = 1;
    string name = 2;
}


service UserService {
    rpc ViewFriends(RequestParams) returns (UserResponse){} 
}